# cdtestplant_v1

./: .env  .gitignore  README.md  db.json  db.sqlite3  manage.py  pyproject.toml  python_ldap-3.4.5-cp313-cp313-win_amd64.whl  requirements-to-nei.txt  requirements.txt  run.py  run.spec  test.ipynb  test.py  拉取最新代码.py  提交github的shell.py
apps/createDocument/: apps.py  controllers.py
apps/createDocument/controllers/: __init__.py  bg.py  dg.py  hjl.py  hsm.py  jl.py  sm.py  wtd.py
apps/createDocument/extensions/: content_result_tool.py  documentTime.py  mixins.py  parse_rich_text.py  solve_problem.py  tools.py  util.py  zhui.py
apps/createSeiTaiDocument/: apps.py  controllers.py  docXmlUtils.py  schema.py
apps/createSeiTaiDocument/extensions/: download_response.py  logger.py  shape_size_tool.py
apps/dict/: apps.py  controllers.py  models.py  schema.py  throttle.py
apps/dict/controllers/: __init__.py  abbreviation.py  common.py  contact.py  dict.py  fragment.py
apps/dict/fragment/: enums.py  (+1 more)
apps/project/: apps.py  models.py  signals.py
apps/system/: apps.py  models.py
apps/user/: admin.py  apps.py  controllers.py  models.py  schema.py
cdtestplant_v1/: __init__.py  api.py  asgi.py  celery.py  celery.py.bak  dev_settings.py  parser.py  renderer.py  settings.py  urls.py  wsgi.py
conf/: env.py  logConfig.py  ninja_extra_settings.py
logs/: generates_logs  root_log
media/output_dir/: 依据文件.docx  格式化.py  测试项及方法.docx  练习人和方式.docx
utils/: chen_crud.py  chen_ninja.py  chen_pagination.py  chen_response.py  codes.py  models.py  path_utils.py  util.py
utils/chapter_tools/: csx_chapter.py
utils/log_util/: middleware.py  request_util.py
utils/smallTools/: interfaceTools.py
打包后配置/: my_install.bat  【说明】win部署说明.txt
打包后配置/python额外的包/: 包重要说明-防止安装失败.txt
(+745 files in other folders)
