[project]
name = "cdtestplant-v1"
version = "0.1.0"
description = "测试管理平台后端程序"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0",
    "django-auth-ldap>=5.2.0",
    "django-environ>=0.12.0",
    "django-ninja>=1.5.1",
    "django-ninja-extra>=0.30.8",
    "django-ninja-jwt>=5.4.2",
    "django-redis>=6.0.0",
    "django-shortuuidfield>=0.1.3",
    "django-tinymce>=5.0.0",
    "docxtpl>=0.20.2",
    "faker>=39.0.0",
    "lizard>=1.19.0",
    "mysqlclient>=2.2.7",
    "ninja-schema>=0.14.3",
    "numpy>=2.4.0",
    "orjson",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-ldap",
    "user-agents>=2.2.0",
]

[tool.uv.sources]
python-ldap = { path = "python_ldap-3.4.5-cp313-cp313-win_amd64.whl" }
