[project]
name = "cdtestplant-v1"
version = "0.1.1"
description = "测试管理平台后端程序"
readme = "README.md"
requires-python = ">=3.13.11,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.2",
    "django-auth-ldap>=5.3.0",
    "django-environ>=0.12.0",
    "django-ninja>=1.5.3",
    "django-ninja-extra>=0.31.0",
    "django-ninja-jwt>=5.4.4",
    "django-redis>=6.0.0",
    "django-shortuuidfield>=0.1.3",
    "django-tinymce>=5.0.0",
    "docxcompose",
    "docxtpl>=0.20.2",
    "faker>=40.4.0",
    "ipykernel>=7.2.0",
    "lizard>=1.21.0",
    "mysqlclient>=2.2.7",
    "ninja-schema>=0.14.3",
    "numpy==2.4.2",
    "orjson>=3.11.6",
    "pandas>=3.0.0",
    "python-docx>=1.2.0",
    "python-ldap",
    "ua-parser-builtins>=202601",
    "user-agents>=2.2.0",
    "waitress>=3.0.2",
]

[tool.uv.sources]
python-ldap = { path = "python_ldap-3.4.5-cp313-cp313-win_amd64.whl" }
